static: replace incorrect inline styles

--- a/templates/static/jobs.html
+++ b/templates/static/jobs.html
@@ -83,10 +83,10 @@
 <p>
 <ul>
 <li>Bachelor's degree or higher in Computer Science or related field</li>
-<li><span style="color: #1d1c1d;">Minimum of 10 years of relevant work experience in software development</span></li>
+<li>Minimum of 10 years of relevant work experience in software development</li>
 </ul>
 <ul>
-<li><span style="color: #1d1c1d;">Minimum of 3 years of management experience</span></li>
+<li>Minimum of 3 years of management experience</li>
 <li>A combination of relevant work experience and education to successfully perform the responsibilities outlined in this description</li>
 <li>Broad experience with systems architecture, software architecture, structured (SQL) and semi-structured (NoSQL) databases, and a number of programming languages</li>
 <li>Knowledge of Judaic texts (e.g., Torah, Talmud, Kabbalistic works, halakhic works, commentaries, etc.)</li>
@@ -97,11 +97,11 @@
 </p>
 <h4>Compensation:</h4>
 <ul>
-<li><span style="color: #222222;">Compensation dependent on experience</span></li>
-<li><span style="color: #222222;">Generous paid time off, including all Jewish holidays</span></li>
-<li><span style="color: #222222;">Keren Hishtalmut</span></li>
-<li><span style="color: #222222;">Work-from-home utility reimbursements</span></li>
-<li><span style="color: #222222;">Professional development budget</span></li>
+<li>Compensation dependent on experience</li>
+<li>Generous paid time off, including all Jewish holidays</li>
+<li>Keren Hishtalmut</li>
+<li>Work-from-home utility reimbursements</li>
+<li>Professional development budget</li>
 </ul>
 <h4>Location:</h4>
 <p>The Lead Engineer may be based anywhere in Israel.</p>
@@ -147,53 +147,53 @@
 <p>The Senior Product Manager will report directly to the Chief Product Officer.</p>
 <h4>In this position you will:&nbsp;</h4>
 <ul>
-<li><span style="color: #3c4043;">Develop product roadmaps and lead product teams to bring those roadmaps to life</span></li>
-<li><span style="color: #3c4043;">Identify and prioritize customer needs and feature requirements</span></li>
-<li><span style="color: #3c4043;">Work closely with cross-functional teams to develop and implement product features and services</span></li>
-<li><span style="color: #3c4043;">Manage a team within the Product department</span></li>
-<li><span style="color: #3c4043;">Monitor product performance and make data-driven decisions</span></li>
-<li><span style="color: #3c4043;">Drive customer feedback and research to guide product innovation</span></li>
-<li><span style="color: #3c4043;">Provide leadership, mentorship, and career development for product team members</span></li>
-<li><span style="color: #3c4043;">Participate in product strategy, planning, and execution of product releases</span></li>
-<li><span style="color: #3c4043;">Collaborate with marketing, education, support, and content teams to ensure successful product launches</span></li>
-<li><span style="color: #3c4043;">Stay up to date with the latest product trends and technologies</span></li>
+<li>Develop product roadmaps and lead product teams to bring those roadmaps to life</li>
+<li>Identify and prioritize customer needs and feature requirements</li>
+<li>Work closely with cross-functional teams to develop and implement product features and services</li>
+<li>Manage a team within the Product department</li>
+<li>Monitor product performance and make data-driven decisions</li>
+<li>Drive customer feedback and research to guide product innovation</li>
+<li>Provide leadership, mentorship, and career development for product team members</li>
+<li>Participate in product strategy, planning, and execution of product releases</li>
+<li>Collaborate with marketing, education, support, and content teams to ensure successful product launches</li>
+<li>Stay up to date with the latest product trends and technologies</li>
 </ul>
 <h4>Attributes we&rsquo;re looking for include:</h4>
 <ul>
-<li><span style="color: #3c4043;">Strategic, analytical, and innovative problem solving skills.</span></li>
-<li><span style="color: #3c4043;">Excellent managerial and supervisory skills.</span></li>
-<li><span style="color: #3c4043;">Commitment to excellence in the craft of product development.</span></li>
-<li><span style="color: #3c4043;">Commitment to direct, clear, professional, and thoughtful communication.</span></li>
-<li><span style="color: #3c4043;">Demonstrated success in working independently in a remote setting.</span></li>
-<li><span style="color: #3c4043;">Passionate and enthusiastic for the work Sefaria does, and dedicated to supporting Sefaria&rsquo;s mission.</span></li>
+<li>Strategic, analytical, and innovative problem solving skills.</li>
+<li>Excellent managerial and supervisory skills.</li>
+<li>Commitment to excellence in the craft of product development.</li>
+<li>Commitment to direct, clear, professional, and thoughtful communication.</li>
+<li>Demonstrated success in working independently in a remote setting.</li>
+<li>Passionate and enthusiastic for the work Sefaria does, and dedicated to supporting Sefaria&rsquo;s mission.</li>
 </ul>
 <h4>Experience, qualifications, and requirements:</h4>
 <ul>
-<li><span style="color: #3c4043;">Bachelor&rsquo;s degree in business, engineering, or related field</span></li>
-<li><span style="color: #3c4043;">Experience in software engineering</span></li>
-<li><span style="color: #3c4043;">3-5+ years of experience in product management, product design, or related field</span></li>
-<li><span style="color: #3c4043;">Proven track record of leading successful product launches, from concept to scaling and growing</span></li>
-<li><span style="color: #3c4043;">Knowledge of web technologies and mobile platforms</span></li>
-<li><span style="color: #3c4043;">Ability to think strategically and analytically, with a focus on delivering results</span></li>
-<li><span style="color: #3c4043;">Excellent problem-solving, critical thinking, and communication skills</span></li>
-<li><span style="color: #3c4043;">Ability to coordinate multiple projects and tasks simultaneously</span></li>
-<li><span style="color: #3c4043;">Knowledge and experience with data analysis and reporting tools</span></li>
-<li><span style="color: #3c4043;">Ability to work in a fast-paced environment and handle tight deadlines</span></li>
-<li><span style="color: #3c4043;">Knowledge of software development methodologies</span></li>
-<li><span style="color: #3c4043;">Understanding of customer needs and how to meet them</span></li>
+<li>Bachelor&rsquo;s degree in business, engineering, or related field</li>
+<li>Experience in software engineering</li>
+<li>3-5+ years of experience in product management, product design, or related field</li>
+<li>Proven track record of leading successful product launches, from concept to scaling and growing</li>
+<li>Knowledge of web technologies and mobile platforms</li>
+<li>Ability to think strategically and analytically, with a focus on delivering results</li>
+<li>Excellent problem-solving, critical thinking, and communication skills</li>
+<li>Ability to coordinate multiple projects and tasks simultaneously</li>
+<li>Knowledge and experience with data analysis and reporting tools</li>
+<li>Ability to work in a fast-paced environment and handle tight deadlines</li>
+<li>Knowledge of software development methodologies</li>
+<li>Understanding of customer needs and how to meet them</li>
 <li>Understanding of written Hebrew</li>
 <li>Excellent English proficiency (written and spoken)</li>
 </ul>
 <ul>
-<li><span style="color: #3c4043;">Ability to work in a remote environment using GSuite, Slack, Zoom, Trello (training will be provided, as needed)</span></li>
+<li>Ability to work in a remote environment using GSuite, Slack, Zoom, Trello (training will be provided, as needed)</li>
 </ul>
 <h4>Compensation:</h4>
 <ul>
-<li><span style="color: #222222;">Compensation dependent on experience</span></li>
-<li><span style="color: #222222;">Generous paid time off, including all Jewish holidays</span></li>
-<li><span style="color: #222222;">Keren Hishtalmut</span></li>
-<li><span style="color: #222222;">Work-from-home utility reimbursements</span></li>
-<li><span style="color: #222222;">Professional development budget</span></li>
+<li>Compensation dependent on experience</li>
+<li>Generous paid time off, including all Jewish holidays</li>
+<li>Keren Hishtalmut</li>
+<li>Work-from-home utility reimbursements</li>
+<li>Professional development budget</li>
 </ul>
 <h4>Location:</h4>
 <p>The Senior Product Manager may be based anywhere in Israel.</p>
