static: remove non-matching he descriptions

--- a/templates/static/jobs.html
+++ b/templates/static/jobs.html
@@ -50,7 +50,7 @@
                 <h2 class="anchorable">Engineering</h2>
             </header>
             <section class="jobsListForDepartment">
-                <div class="job int-en">
+                <div class="job englishOnly">
                     <details>
                         <summary>Lead Engineer - Israel</summary>
 
@@ -115,28 +115,8 @@
                         <p>Sefaria provides equal employment opportunities to all employees and applicants for employment and prohibits discrimination and harassment of any type without regard to race, color, religion, age, sex, national origin, disability status, genetics, protected veteran status, sexual orientation, gender identity or expression, or any other characteristic protected by federal, state or local laws. Nothing in this job description or advertisement postings guarantees employment.</p>
                     </details>
                 </div>
-                <div class="job int-he">
-                    <details>
-                        <summary>ראש/ת צוות פיתוח לחברת</summary>
-                        <p>לחברת Sefaria דרוש/ה ראש/ת צוות פיתוח לתפקיד המשלב: מתן הכוונה טכנית והובלת צוות פיתוח, הרחבה ותחזוקה של מערכות תוכנה מורכבות, הדרכת צוות ההנדסה, סיוע בזיהוי ופתרון בעיות, ניהול פרויקטים בפיתוח, ארכיטקטורה, ועוד.</p>
-                        <p>המשרה במודל עבודה מהבית בלבד</p>
-                        <h4>דרישות:</h4>
-                        <ul>
-                            <li>תואר ראשון במדעי המחשב – חובה</li>
-                            <li>ניסיון של 6-7 בפיתוח תוכנה – חובה</li>
-                            <li>ניסיון בניהול צוות של שנה- שנתיים – חובה</li>
-                            <li>ניסיון בpython , react native, react, mongodb , SQL NoSQL- יתרון משמעותי</li>
-                            <li>אנגלית ברמה התנהלות שוטפת – חובה</li>
-                            <li>המשרה מיועדת לגברים ונשים כאחד</li>
-                        </ul>
-                        <p>המשרה מיועדת לגברים ונשים כאחד קורות חיים נא לשלוח לחברת ההשמה InTouch אשר מנהלת את הליך המיון עבור ספריא.
-                            <br>כתובת המייל
-                            <br>job@in-touch.co.il</p>
-                    </details>
 
-                </div>
-
-                <div class="job int-en">
+                <div class="job englishOnly">
                     <details>
                         <summary>Product Manager - Israel</summary>
                         <p><a href="https://www.sefaria.org/" target="_blank" rel="noopener">Sefaria</a>, a non-profit organization dedicated to building the future of Torah in an open and participatory way, seeks a hands-on Senior Product Manager.&nbsp; We are looking for someone with a solid track record of contributing to complex software projects to join our growing team in a leadership position. Experience managing product development, complex projects and teams is required.&nbsp;</p>
@@ -204,28 +184,6 @@
                         <h4>About <a href="https://www.sefaria.org/" target="_blank" rel="noopener">Sefaria</a>:</h4>
                         <p>Sefaria is a non-profit organization dedicated to building the future of Torah in an open and participatory way. We are assembling a free, digital library of Jewish texts and translations and developing digital tools, educational resources, and engagement opportunities that enable people to deepen their study. Sefaria was founded in 2013 and has since become a mainstay of Jewish learning and education with more than 4 million users annually. Sefaria&rsquo;s API powers nearly <a href="https://github.com/Sefaria/Sefaria-Project/wiki/Projects-Powered-by-Sefaria" target="_blank" rel="noopener">80 independent projects</a> and dozens of <a href="https://www.sefaria.org/linker" target="_blank" rel="noopener">Torah-focused websites</a>. Sefaria's team of nearly 30 full-time staff is remote, with employees based in several U.S. cities and in Israel.&nbsp;</p>
                         <p>Sefaria provides equal employment opportunities to all employees and applicants for employment and prohibits discrimination and harassment of any type without regard to race, color, religion, age, sex, national origin, disability status, genetics, protected veteran status, sexual orientation, gender identity or expression, or any other characteristic protected by federal, state or local laws. Nothing in this job description or advertisement postings guarantees employment.</p>
-                    </details>
-
-                </div>
-
-                <div class="job int-he">
-                    <details>
-                        <summary>מנהל/ת מוצר בכיר/ה לארגון גלובלי</summary>
-                        <p>לארגון גלובלי דרוש/ה מנהל/ת מוצר בכיר/ה לתפקיד המשלב:</p>
-                        <p>אחריות על ניהול מחזור חיי המוצר משלב הרעיון ועד ההשקה, פיתוח מפת דרכים למוצר, הובלת וניהול צוות, זיהוי צרכי הלקוח ודרישות המוצר, מעקב אחר ביצועי המוצר, שיתוף פעולה עם מחלקות נוספות, ועוד.</p>
-                        <p>המשרה במודל remote</p>
-                        <h4>דרישות</h4>
-                        <ul>
-                            <li>תואר ראשון רלוונטי - חובה</li>
-                            <li>3-5 שנות ניסיון בניהול מוצר, עיצוב מוצר או תחום קשור - חובה</li>
-                            <li>ניסיון בפיתוח תוכנה - חובה</li>
-                            <li>אנגלית ברמה גבוהה - חובה</li>
-                            <li>יכולת עבודה בסביבה מרוחקת באמצעות GSuite, Slack, Zoom, Trello</li>
-                            <li>המשרה מיועדת לנשים וגברים כאחד</li>
-                        </ul>
-                        <p>קורות חיים נא לשלוח לחברת ההשמה InTouch אשר מנהלת את הליך המיון עבור ספריא.
-                            <br>כתובת המייל
-                            <br>job@in-touch.co.il</p>
                     </details>
 
                 </div>
