static(jobs): Add job listing

--- a/templates/static/jobs.html
+++ b/templates/static/jobs.html
@@ -44,7 +44,14 @@
                 <div class="job"><a class="jobLink" target="_blank" href=""></a></div>
             </section>
         </section>--->
-
+        <section class="section department englishOnly">
+            <header>
+                <h2 class="anchorable">Administration</h2>
+            </header>
+            <section class="jobsListForDepartment">
+                <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/a9584773b502-chief-of-staff">Chief of Staff</a></div>
+            </section>
+        </section>
         <section class="section department englishOnly">
             <header>
                 <h2 class="anchorable">Engineering</h2>
@@ -198,7 +205,7 @@
                 <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/1c6b3f1978e8-social-media-coordinator">Social Media Coordinator</a></div>
             </section>
         </section>
-                <section class="section department englishOnly">
+        <section class="section department englishOnly">
             <header>
                 <h2 class="anchorable">HR and Operations</h2>
             </header>
