static(team): Add team member

--- a/templates/static/en/team.html
+++ b/templates/static/en/team.html
@@ -265,6 +265,20 @@
                             </div>
                         </div>
                     </div>
+                     <div class="teamMember">
+                        <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/roy.png' %}" alt="Headshot of Roy Pereg">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-en">Roy Pereg</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-en">Contractor - </span>
+                                <span class="int-en">Hebrew Editorial Associate</span>
+                            </div>
+                        </div>
+                    </div>
                     <div class="teamMember">
                         <div class="teamMemberImage">
                             <img src="{% static 'img/headshots/rebecca.png' %}" alt="Headshot of Rebecca Remisn">
