--- a/templates/static/he/team.html
+++ b/templates/static/he/team.html
@@ -292,6 +292,19 @@
                     </div>
                     <div class="teamMember">
                         <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/roy.png' %}" alt="Headshot of Roy Pereg">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-he">רועי דב פרג</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-he">רכז עריכת תוכן עברי</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <div class="teamMemberImage">
                             <img src="{% static 'img/headshots/israel.png' %}" alt="Headshot of Israel Tsadok">
                         </div>
                         <div class="teamMemberDetails">
