--- a/templates/static/jobs.html
+++ b/templates/static/jobs.html
@@ -197,14 +197,14 @@
 
             </section>
         </section>
-        <section class="section department englishOnly">
+        <!---<section class="section department englishOnly">
             <header>
                 <h2 class="anchorable">Marketing and Communications</h2>
             </header>
             <section class="jobsListForDepartment">
-                <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/1c6b3f1978e8-social-media-coordinator">Social Media Coordinator</a></div>
+                <div class="job"><a class="jobLink" target="_blank" href=""></a></div>
             </section>
-        </section>
+        </section>--->
         <section class="section department englishOnly">
             <header>
                 <h2 class="anchorable">HR and Operations</h2>
