static: update contact info for lead supporters

--- a/templates/static/supporters.html
+++ b/templates/static/supporters.html
@@ -169,14 +169,14 @@
             </h2>
             <p>
                 <span class="int-en">
-                    To learn more about becoming a lead supporter, <br/> please contact Hannah Goldberger, Development Manager at <a href="mailto:hannah@sefaria.org"><bdo dir="ltr">hannah@sefaria.org</bdo></a>.
+                    To learn more about becoming a lead supporter, <br/> please contact Samantha Shokin, Grant Writer and Development Associate at <a href="mailto:samantha@sefaria.org"><bdo dir="ltr">samantha@sefaria.org</bdo></a>.
                 </span>
                 <span class="int-he">
                     אם ברצונכם לבחון את האפשרות להיות תומכים מובילים,
                     <br/>
                     אנא צרו קשר עם
-                    חנה גולדברגר, מנהלת פיתוח וגיוס משאבים במייל
-                     <a href="mailto:hannah@sefaria.org"><bdo dir="ltr">hannah@sefaria.org</bdo></a>.
+                    סמנתה שוקין, רכזת פיתוח וכתיבת מענקים במייל
+                     <a href="mailto:samantha@sefaria.org"><bdo dir="ltr">samantha@sefaria.org</bdo></a>.
                 </span>
             </p>
             <p class="tagline">
