static(dicta page): Fix margins

--- a/templates/static/dicta-thanks.html
+++ b/templates/static/dicta-thanks.html
@@ -18,7 +18,7 @@
 {% endblock %}
 
 {% block content %}
-<div id="aboutPage" class="biReady container static">
+<main id="dictaThanksPage" class="biReady container static">
     <div class="inner">
         <h1>
             <span class="int-en">Sefaria and Dicta</span>
@@ -71,5 +71,5 @@
             </p>
         </div>
     </div>
-</div>
+</main>
 {% endblock %}
