--- a/templates/static/en/team.html
+++ b/templates/static/en/team.html
@@ -92,7 +92,7 @@
                                 <span class="int-en">Yishai Glasner</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Content Engineer</span>
+                                <span class="int-en">Software Engineer</span>
                             </div>
                         </div>
                     </div>
