static(modals): Fix hebrew copy on library fundraising campaign modal

--- a/templates/messages/2023-02-04-library-fund-1.html
+++ b/templates/messages/2023-02-04-library-fund-1.html
@@ -82,7 +82,8 @@ Exciting news: Between now and Purim, all donations to Sefaria’s new Library F
         </span>
         <span class="int-he">
 
-חדשות מרגשות: מעתה ועד פורים, כל התרומות שיתקבלו עבור קרן הספריה החדש של ספריא יוכפלו הודות לתרומה נדיבה.
+יש לנו חדשות מרגשות! מעתה ועד פורים, כל התרומות שיתקבלו עבור קרן-הספריה החדשה של ספריא יוכפלו, הודות לתרומה נדיבה.
+
  </span>
     </p>
 
@@ -92,7 +93,7 @@ Exciting news: Between now and Purim, all donations to Sefaria’s new Library F
 Donations to this fund will directly support costs related to text acquisition, translation, digitization, and more. All support will help grow the library and enhance your Jewish learning.
 </span>
         <span class="int-he">
-תרומות לקרן זו יעניקו תמיכה ישירה לכיסוי עלויות הקשורות לרכישת טקסטים, תרגומם, דיגיטציה ועוד. כל תמיכה שתתקבל תעזור להצמיח את הספריה ולחזק את הלמידה היהודית שלכם.
+ תרומות לקרן זו יעניקו תמיכה ישירה לכיסוי עלויות הקשורות לרכישת טקסטים, תרגומם, דיגיטציה ועוד. כל תמיכה שתתקבל תעזור להצמיח את הספריה ולחזק את הלמידה היהודית שלכם.
    </span>
     </p>
 
