chore(team): Yishai Glasner is not Jr. in Hebrew.

--- a/templates/static/he/team.html
+++ b/templates/static/he/team.html
@@ -63,7 +63,7 @@
                                 <span class="int-he">ישי גלזנר</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">מהנדס תוכן זוטר</span>
+                                <span class="int-he">מהנדס תוכנה</span>
                             </div>
                         </div>
                     </div>
@@ -208,7 +208,7 @@
                                 <span class="int-he">יונדב ליבוביץ</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">מהנדס תכנה - מתמחה</span>
+                                <span class="int-he">מהנדס תוכנה - מתמחה</span>
                             </div>
                         </div>
                     </div>
