--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -4787,17 +4787,18 @@ body .ui-autocomplete.dictionary-toc-autocomplete .ui-menu-item a.ui-state-focus
 }
 .headerWithAdminButtons {
   display: flex;
-  align-items: center;
-}
-.headerWithAdminButtons .end {
   flex: 1;
-  text-align: end;
 }
 .adminButtons.hideButtons {
   display: none;
 }
 .adminButtons {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  width: 127px;
+  height: 90px;
+  position: absolute;
 }
 .toggleSet.blueStyle.primary {
   width: 100%;
@@ -7401,7 +7402,11 @@ a .button:hover {
   background-color: var(--lighter-grey);
   white-space: nowrap;
 }
-
+.adminButtons .button.extraSmall.topic {
+  box-shadow: 0 1px 3px rgb(0 0 0 / 25%);
+  color: #666666;
+  font-size: 14px;
+}
 .button .buttonIcon {
   margin-inline-end: 7px;
   vertical-align: middle;
