--- a/static/css/s2.css
+++ b/static/css/s2.css
@@ -6177,6 +6177,8 @@ But not to use a display block directive that might break continuous mode for ot
   color: #999;
 }
 .webpageList .webpage .stats,
+.webpageList .webpage .author,
+.webpageList .webpage .source,
 .mediaList .media .meta,
 .manuscript .meta {
   font-size: 13px;
